# small_3d

./: Cargo.toml  README.md  Trunk.toml  build_apk.ps1  build_apk_dbg.ps1  index.html  release.keystore  run_win.ps1  small_3d-17be2d2da685f0a5.js  small_3d-41b8cde95fa61007.js  small_3d-49fb44c6690ab652.js  small_3d-4bf876298c8f1d4b.js  small_3d-57cfab3a5c33caea.js  small_3d-614a05282930be86.js  small_3d-7b64b73d8d7df960.js  small_3d-82c183577209ae5c.js  small_3d-ae8bfa9d2bbfc806.js  small_3d-bd8469bef3c0b6f6.js  small_3d-be5e976bdddcde00.js  small_3d-ce266fda612c63f5.js  small_3d-eb4b38f60152e558.js  small_3d-f5ab95555a6f8f81.js
.blender/: arrow.blend  player.blend
.blender/levels/: demo.blend  level1.blend
.blender/lib/: star.blend
.gimp/: player.xcf  star.xcf
.github/workflows/: release.yaml
android/: Dockerfile
assets/: themes.json
assets/models/: arrow.glb
assets/models/levels/: demo.glb  level1.glb
small_3d_apk/: Cargo.toml  Dockerfile  build_apk.ps1  build_apk_dbg.ps1
small_3d_apk/src/: lib.rs
small_3d_game/: Cargo.toml
small_3d_game/.blender/levels/: demo.blend
small_3d_game/.gimp/: player.xcf
small_3d_game/assets/: themes.json
small_3d_game/assets/models/: player.glb
small_3d_game/src/common/plugins/: mod.rs  ui_plugin.rs
small_3d_game/src/game/plugins/: custom_tweening_plugin.rs  game_camera_plugin.rs  game_scene_plugin.rs  game_ui_plugin.rs
small_3d_game/src/main_menu/: mod.rs
small_3d_game/src/resources/: game_assets.rs  loadable.rs  mod.rs  text_styles.rs
small_3d_wasm/: Cargo.toml  Trunk.toml  index.html
small_3d_wasm/src/: main.rs
src/: lib.rs  main.rs  resources.rs  utils.rs
src/common/plugins/: mod.rs  ui_plugin.rs  user_input_plugin.rs
src/game/: components.rs  game_plugin.rs  mod.rs  plugin.rs  resources.rs
src/game/plugins/: aiming_plugin.rs  custom_tweening_plugin.rs  game_scene_plugin.rs  game_ui_plugin.rs  mod.rs  movement_plugin.rs  player_plugin.rs
src/game/scenes/: test.rs
src/main_menu/: main_menu_plugin.rs  plugin.rs
src/main_menu/plugins/: loading_view_plugin.rs  mod.rs
src/resources/: game_assets.rs  inputs.rs  loadable.rs  mod.rs  random.rs  resources_plugin.rs  text_styles.rs
windows/: Dockerfile
