[package]
name = "small_3d"
version = "0.1.0"
edition = "2021"

[lib]
crate_type=["staticlib", "cdylib"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[package.metadata.android]
package = "com.petompp.small_3d"
build_targets = ["armv7-linux-androideabi"]
assets = "assets"
apk_name = "small_3d"
strip = "strip"

[package.metadata.android.sdk]
target_sdk_version = 34

[package.metadata.android.signing.release]
path = "release.keystore"
keystore_password = "android"

[dependencies]
bevy = "0.13.1"
bevy-inspector-egui = "0.23"
bevy_rapier3d = "0.25"
bevy_tweening = "0.10"
bevy_vector_shapes = "0.7"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo = "0.11"
web-sys = "0.3"

[lints.clippy]
type-complexity = "allow"
