[workspace]
members = [
	"small_3d_apk",
	"small_3d_game",
	"small_3d_wasm"
]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev.package.small_3d_game]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
