[workspace]
members = [
	"small_3d_apk",
	"small_3d_game",
	"small_3d_wasm"
]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev.package.small_3d_game]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = "0.13.2"
bevy-inspector-egui = "0.23"
bevy_rapier3d = "0.25"
bevy_tweening = "0.10"
bevy_vector_shapes = "0.7"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
gloo = "0.11"
web-sys = "0.3"

[workspace.lints.clippy]
type-complexity = "allow"
