[package]
name = "small_3d_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_rapier3d = { workspace = true }
bevy_tweening = { workspace = true }
bevy_vector_shapes = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo = { workspace = true }
web-sys = { workspace = true }
